--- a/13-Effects.Rmd
+++ b/13-Effects.Rmd
@@ -1,3 +1,4 @@
+
 # Effects
 
 
@@ -11,31 +12,33 @@
 ## Effect Basics
 
 
-13.1. Effect Basics
+
 
 >All Screen captures below are from the Advanced Effects Editor.
 
-Vibe Effects are made up of Effect Events running along horizontal Effect Tracks. Each Event Track must have:
+Vibe **Effects** are made up of **Effect Events** running along horizontal **Effect Tracks**. 
+
+**Each Event Track must have:**
 
 -   At least one parameter assigned in the far left column. Additional parameters may be added but they will respond simultaneously to the Effect.
     
 -   One Effect Event. Additional Effect Events may be added to the track each with its own time base or Effects may be merged and share a time base.
     
 
-Multi-track effects:
+**Multi-track effects:**
 
 -   Effects requiring more than one parameter may be stacked on separate Effects Tracks.
     
 -   Examples of Multi-track effects would be: 
 
-◾ CMY and RGB color effects 
+	- CMY and RGB color effects 
 
-◾ Pan/Tilt Circles 
+	- Pan/Tilt Circles 
 
-◾ Blade effects
+	- Blade effects
     
 
-All Effect Events are built from the following components:
+**All Effect Events are built from the following components:**
 
 -   Functions
     
@@ -128,16 +131,13 @@ All Effect Events are built from the following components:
 
 -   Once effects have been created then may be directly stored in cues and scenes or saved in Effects Libraries for future use.
     
--   Effect Libraries are stored similar to normal Libraries Store and Modify Bank Libraries.
+-   Effect Libraries are stored similar to normal Libraries [Store and Modify Bank Libraries](https://vibemanual.compulite.com/libraries.html#store-and-modify-bank-libraries).
     
 -   Effects libraries have one additional option to allow users to include the base values. This is useful when effects must start from an absolute value.
 
 
 
 ## Smart Screen Effects Editor
-
-
-13.2. Smart Screen Effects Editor
 
 The Smart Screen Effects Editor allows users to quickly build effects within the normal work flow of the console while still having access to the main live displays. **Effect Tracks** are created for every selected parameter but they are hidden to remove screen clutter. Some advance operations are removed to speed up programming of simple effects.
 
@@ -156,37 +156,37 @@ The Smart Screen Effects Editor allows users to quickly build effects within the
 
 ### Building Effects Using the Small Screen Editor
 
-13.2.1. Building Effects Using the Small Screen Editor
-
 **To build an Effect in the Smart Screen Effects Editor:**
 
 1.  Select the the fixtures to be used in the Effect.
     
-2.  Select the **parameter/parameters** to be in the Effect 9.4.2. What are Parameters
+2.  Select the **parameter/parameters** to be in the Effect [9.4.2. What are Parameters](https://vibemanual.compulite.com/programming-basics.html#what-are-parameters)
     
 3.  Press [EFFECT] - The Smart Screen Effect Editor will open in the {Attributes} display with a blank Effect Event.
     
-4.  Tap the Pre Built tab and make a selection. Or
+4.  <span style="color:Gray">Tap the Pre Built tab and make a selection. </span>
+
+<span style="color:Gray">Or </span>
     
 5.  Tap the Favorite Primitive tab and select a Primitive - the Function shown on the Primitive will be loaded with a default linear Pattern.
     
 6.  The Pattern may be changed by by tapping any of the following: 
     
-    ◾ / Fixtures move in a positive direction across the selection. 
+    - / Fixtures move in a positive direction across the selection. 
   
-    ◾ \ Fixture move in a negative direction across the selection. 
+    - \ Fixture move in a negative direction across the selection. 
 
-    ◾ /\ Fixture mirror in a positive direction. 
+    - /\ Fixture mirror in a positive direction. 
     
-    ◾ / Fixture mirror in a negative direction.
+    - / Fixture mirror in a negative direction.
     
 7.  Set the Offset {Pattern Spread} - Default is 100%. 
     
-    ◾ 100% = Selection is divided 100% transitioning across the Primitive.
+    - 100% = Selection is divided 100% transitioning across the Primitive.
     
-    ◾ 0% = all fixtures transition in unison.
+    - 0% = all fixtures transition in unison.
     
-8.  Set Swing (In Base) as needed 13.1. Effects Basics
+8.  Set Swing (In Base) as needed [13.1. Effects Basics](https://vibemanual.compulite.com/effects-1.html#effect-basics)
     
 9.  Adjust Size and Base to set the Low and High ranges of the values
     
@@ -197,11 +197,11 @@ The Smart Screen Effects Editor allows users to quickly build effects within the
 
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FMLJPn65GrCpdENgeBuI3%2F13.2.1.webp?alt=media&token=ac88df5b-06e7-4313-9407-bc348c14f3c3)
-**Smart Screen**
+ <p align=center> Smart Screen</p>
 
 **Grouping:**
 
-For Grouping to be noticeable there must be an Pattern Offset Spread above 0%.
+>For Grouping to be noticeable there must be an Pattern Offset Spread above 0%.
 
 1. Tap the {Grouping} key - The Grouping page will open.
     
@@ -209,17 +209,17 @@ For Grouping to be noticeable there must be an Pattern Offset Spread above 0%.
     
 3.  Set the {Blocks Of} [#] - This interleaves the Pattern into Groupings. 
    
-    ◾ The Default for Blocks and Sub Block is 1/0 - No Groupings. 
+    - The Default for **Blocks** and **Sub Block** is 1/0 - No Groupings. 
    
-    ◾ When {Blocks Of} is set to 1 or above, the Sub Blocks will move to 1 and Interleave Groups will be possible. 
+    - When {Blocks Of} is set to 1 or above, the Sub Blocks will move to 1 and Interleave Groups will be possible. 
    
-    ◾ e.g. 2/1 would interleave a selection into Odds/Evens. 
+    - e.g. 2/1 would interleave a selection into Odds/Evens. 
    
-    ◾ e.g. 3/1 would interleave a selection of 12 fixtures into [1+4+7+10] - [2+5+8+11] - [3+6+9+12]
+    - e.g. 3/1 would interleave a selection of 12 fixtures into [1+4+7+10] - [2+5+8+11] - [3+6+9+12]
     
 4.  Set the {Sub Blocks Of} - Combines fixture in a selection, to act like single fixtures. 
 
-    ◾ e.g. 12/2 would combine [1+2] - [3+4] - [5+6] - [7+8] - [9+10] - [11+12]
+    - e.g. 12/2 would combine [1+2] - [3+4] - [5+6] - [7+8] - [9+10] - [11+12]
     
 
 >As a shortcut, Setting {Sub Block Of} back to 0 allows {Blocks Of} to combine fixtures instead of interleaving - 2/0 would combine [1+2] - [3+4] - [5+6] - [7+8] - [9+10] - [11+12]
@@ -240,7 +240,7 @@ Both Effect Editors write to the same Effect Engine. Either or both may be used 
     
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FoWHeezMvX1aI2sNpksZw%2F13.3.webp?alt=media&token=75cb2b00-1aca-49e9-b84b-e8e021ae43d7)
-**Advanced Effect Editor**
+<p align=center> Advanced Effect Editor</p>
 
 **The Advanced Effects Editor differs from the Smart Screen Effects Editor in the following ways:**
 
@@ -269,37 +269,41 @@ Building Effects in the Advanced Editor differs from the Smart Screen Editor in 
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F5ShDQJRdKbXuqv2ZINAc%2F13.3.0.2.webp?alt=media&token=108c475e-6e16-44a3-a6da-e9d4808706f7)
 
+### Build a basic Effect in the Advanced Effects Editor
+
 **Build a basic Effect in the Advanced Effects Editor:**
 
 1.  Select the fixtures to be used in the Effect.
     
 2.  Press [VIBE]+[EFFECT] to open the Advanced Effect Editor.
     
-3.  Tap a parameter bank in the FIiters area.
+3.  Tap a parameter bank in the **FIiters** area.
     
-4.  Tap a parameter in the Choose Parameter area - the parameter background will turn purple.
+4.  Tap a parameter in the **Choose Parameter** area - the parameter background will turn purple.
     
 5.  Tap a blank space in the Parameter Column of an unassigned Effect Track
     
 
--   the parameter will be assigned and the Attributes Column.
+-   the parameter will be assigned and the **Attributes Column**.
     
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FX6HquT8ZjyknVOW4hFaV%2F13.3.1.webp?alt=media&token=41203d4f-ce06-4c05-9a58-f9c18ff91f44)
 
-6. Tap a Function from the Favorites tab or All Functions tab - The Function background will turn purple.
+6. Tap a **Function** from the Favorites tab or All Functions tab - The Function background will turn purple.
 
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FCtz0h7EygEwdVYVqGu8y%2F13.3.1.2.webp?alt=media&token=8d0ba766-063c-4191-b479-4b9f3a720e58)
 
-7. Tap a blank space in the Effect Event Column - an Effect Event will be created with a Primitive and Pattern .
+7. Tap a blank space in the **Effect Event Column** - an Effect Event will be created with a Primitive and Pattern .
 
-8. Adjust Pattern and Primitive settings - See 13.1. Effects Basics
+8. Adjust Pattern and Primitive settings - See [13.1. Effects Basics](https://vibemanual.compulite.com/effects-1.html#effect-basics)
 
 9. Close the Advanced editor using the ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FiqDovif3XQdSLCRmPgLg%2Fimage.png?alt=media&token=5fda6a67-cd96-4687-aa9e-78c3ae594e41) in the upper right corner.
 
-10 Store final Effect directly to a cue/scene or to the Effects Library.
+10. Store final Effect directly to a cue/scene or to the Effects Library.
 
-**Grouping:** See 13.2.1. Building Effects Using the Small Screen Editor **Blocks by Groups:** - Groups may be substituted for individual fixtures using this option.
+**Grouping:** See [13.2.1. Building Effects Using the Small Screen Editor](https://vibemanual.compulite.com/effects-1.html#building-effects-using-the-small-screen-editor) 
+
+**Blocks by Groups:**  Groups may be substituted for individual fixtures using this option.
 
 1.  Select Groups in the order you wish the effect to use.
     
@@ -326,7 +330,8 @@ Building Effects in the Advanced Editor differs from the Smart Screen Editor in 
 2.  Tap the space to the right of an existing Effect Even - A new Effect Event will be stacked beside the existing one.
     
 -   Each Stacked Effect Event can have its own Primitive and Pattern.
-- **Combining Effects Events:**
+
+**Combining Effects Events:**
 
 1.  Drag and drop the primitive of an Effect Event over an adjacent primitive
     
@@ -341,7 +346,7 @@ Building Effects in the Advanced Editor differs from the Smart Screen Editor in 
 2.  Tap {+ Duplicate} - A duplicate of the Effect Event will be added to the right of the source Effect Event.
     
 
-**Copy an Effect Track:** Copies Effect Event settings to a new parameter (synchronize).
+**Copy an Effect Track:**  Copies Effect Event settings to a new parameter (synchronize).
 
 1.  Tap a parameter bank in the **FIiters** area.
     
@@ -356,7 +361,8 @@ Building Effects in the Advanced Editor differs from the Smart Screen Editor in 
 6.  Tap in the blank area to the right of the new parameter - The area will turn blue and the Effects Toolbar will open under the Effects Tracks.
     
 7.  Tap {Paste} - The source Effect Event settings will be pasted to the new parameter.
-    **Delete an Effect Event:**
+    
+   **Delete an Effect Event:**
 
 1.  Tap either the pattern or primitive of the event to be deleted - the background will turn red.
     
@@ -367,7 +373,7 @@ Building Effects in the Advanced Editor differs from the Smart Screen Editor in 
 
 -   **Using Edit Cue:**
     
->Cue must be active on a controller or it will be loaded to the Master Controller and bump its current Qlist out.
+><span style="color:Red">Cue must be active on a controller or it will be loaded to the Master Controller and bump its current Qlist out.</span>
 
 1. [QLIST] [#] [CUE] [#] [EDIT] - Cue values will be placed in the Editor and the [UPDATE] key will flash red.
     
@@ -442,7 +448,11 @@ Building Effects in the Advanced Editor differs from the Smart Screen Editor in 
 
 10 Store final Effect directly to a cue/scene or to the Effects Library.
 
-**Grouping:** See 13.2.1. Building Effects Using the Small Screen Editor **Blocks by Groups:** - Groups may be substituted for individual fixtures using this option.
+**Grouping:**  
+
+See [13.2.1. Building Effects Using the Small Screen Editor](https://vibemanual.compulite.com/effects-1.html#building-effects-using-the-small-screen-editor)
+
+**Blocks by Groups:** - Groups may be substituted for individual fixtures using this option.
 
 1.  Select Groups in the order you wish the effect to use.
     
